# ECE362-FinalProject

./: platformio.ini
core1_project/: CMakeLists.txt  main.c
include/: sdcard.h
old/: .gitignore
old/include/: gpio_pio.h  lcd.h  sdcard.h
old/src/: gpio6_in.pio.h  gpio_pio.c  lcd.c  main.c  sdcard.c  uart.c
ram_loader_test/: .gitignore  CMakeLists.txt  README.md  build.sh  build_ubuntu.sh
ram_loader_test/game/: CMakeLists.txt  audio.c  demo_game.c  keypad.c  keypad.h  lcd.c  memmap_game.ld  old_tetris.c  queue.h  support.c  support.h  tetris.c
ram_loader_test/loader/: CMakeLists.txt  diskio.c  flash.sh  flash_ubuntu.sh  main.c  sdcard.c
ram_loader_test/tools/: bin2header.py
scripts/: build_core1.py
src/: diskio.c  gpio6_in.pio  gpio6_in.pio.h  gpio_pio.c  main.c  sdcard.c  uart.c
